# wodapp

./: .gitignore  .prettierrc.json  README.md  biome.json  color-simulation.html  database.types.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy.yml
apps/web-admin/: README.md  biome.json  components.json  package.json  svelte.config.js  vite.config.ts
apps/web-athlete/: .prettierrc  README.md  eslint.config.js  package.json  svelte.config.js  vite.config.ts
data/: .gitignore  .vercelignore  dockerfile  keywords.py  main.py  pyproject.toml  refresh_aliases.py  requirements.txt  schema.py
infra/: .gitignore  main.tf
standards_api/: .gitignore  Dockerfile  Gemfile  README.md  scrape.rb
standards_api/config/: application.rb  cable.yml  credentials.yml.enc  database.yml  deploy.yml
standards_api/db/: schema.rb
supabase/: config.toml
supabase/migrations/: 20260228_add_location_settings.sql  20260303_add_location_to_workouts.sql  20260311_check_class_capacity.sql  20260311_rls_classes.sql  20260317_infractions.sql  20260317_retrofill_policy_settings.sql  20260318_booking_delay.sql  20260318_credit_deduction_RPC.sql  20260319_create_notifications_queue.sql  20260319_waitlist.sql  260319_check_class_capacity_update.sql  260319_classes_realtime.sql  260322_waitlist_notification_trigger.sql  260323_RPC_book_class.sql  260323_RPC_cancel_booking.sql  260323_TRIGGER_sync_confirmed_bookings_count_and_classes.sql  260323_dummy_profiles.sql  260504_workout_parser_setup.sql  260610_memberships_RLS.sql  260610_profiles_RLS.sql  (+3 more)
(+106 files in other folders)
